--- a/src/components/Tab.css
+++ b/src/components/Tab.css
@@ -2,20 +2,11 @@
     height: 100%;
 }
 
-.Tabs .lander h1 {
-  font-family: "Open Sans", sans-serif;
-  font-weight: 600;
-}
-
 .Tabs h4 {
   font-family: "Open Sans", sans-serif;
   font-weight: 600;
 }
 
-.Tabs .lander p {
-  color: #999;
-}
-  
 .Tabs .tablist {
   width: 100%;
   height: 100%;
