--- a/src/containers/Companies.css
+++ b/src/containers/Companies.css
@@ -6,6 +6,11 @@
   height: 2.5pc;
 }
 
+.Companies .description {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 400;
+}
+
 .companyType {
   offset: 10pc;
 }
